fix: access to Item by direct link. Need to fix vert long tablet overflow

--- a/styles.css
+++ b/styles.css
@@ -41,12 +41,6 @@ html{
 /*-----------мобилки: <= 767, Таб 768-1200, ПеКа >= 1201--------*/
 /*для широких ПеКА*/
 @media screen and (min-width: 1500px) {
-    .Contacts-figures figure{
-
-    }
-    .Contacts-figures figure img{
-
-    }
 }
 
 /*для ПеКА*/
@@ -60,12 +54,6 @@ html{
     #brand-R{
         text-shadow: 0 0 10px var(--PC-R);
     }
-    .About figure{
-
-    }
-    .Contacts-figures figure{
-
-    }
 }
 /*для планш*/
 @media screen and (max-width: 1200px) and (min-width:768px){
@@ -77,12 +65,6 @@ html{
     }
     #brand-R{
         text-shadow: 0 0 10px var(--tab-R);
-    }
-    .About figure{
-
-    }
-    .Contacts-figures figure{
-
     }
 
 }
@@ -97,12 +79,7 @@ html{
     #brand-R{
         text-shadow: 0 0 10px var(--mob-R);
     }
-    .About figure{
 
-    }
-    .Contacts-figures figure{
-/*        width:100%;*/
-    }
 }
 
 /*===========header и всё в нём=======================*/
@@ -644,21 +621,60 @@ footer{
 }
 
 /*=====================about раздел========================*/
-.About-whole-container{
-    margin:0 10px;
+/*для ПеКА*/
+@media screen and (min-width: 1201px) {
+    .About-figures{
+        display: flex;
+        flex-direction: row;
+        width:100%;
+        /*justify-content: center;*/
+        /*align-items: center;*/
+    }
+    .About-figures figure{
+        padding:10px;
+        width:50%;
+        aspect-ratio: 1/1;
+        text-align: center;
+        margin: 10px 0;
+    }
+    .About-figures img{
+        width:100%;
+        height:100%;
+        object-fit: contain;
+    }
+}
+/*для планш гориз*/
+@media screen and (min-width:768px) and (max-width: 1200px)  {
+
 }
 
+/*для планш верт*/
+@media screen and (min-width:481px) and (max-width: 767px) {
+
+}
+
+/*для мобилок*/
+@media screen and (max-width: 480px) {
+
+}
+
+.About-whole-container{
+
+}
+
+
 .About-figures figure{
-    margin-top:20px;
-    margin-bottom:10px;
+
 }
 
 .About-figures img{
-    max-width:100%;
+
 }
 
 .About-description{
- margin-bottom:10px;
+    margin:10px 20px;
+    text-align:left;
+
 }
 
 .About-description a{
